--- a/templates/base.html
+++ b/templates/base.html
@@ -146,6 +146,27 @@
     </div>
     <!-- END TOP NAVIGATION BAR -->
   </div>
+  <div id="errorModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h3 id="myModalLabel">{{_("Error")}}</h3>
+              </div>
+              <div class="modal-body">
+                
+                  
+                    <p>An error was occured. Please try again</p>
+
+                  
+                    
+                    </fieldset>
+                
+              </div>
+              <div class="modal-footer">
+                <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Close")}}</button>
+              
+              </div>
+              
+       </div>
 <div ng-view class="page-container row-fluid">
 {% block content %}{% endblock %}
 </div>
@@ -211,7 +232,7 @@
 
 
 
-       //var ROOT = '/_ah/api';
+      // var ROOT = '/_ah/api';
 
    
       var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
