Retrieve push of tedj

--- a/templates/base.html
+++ b/templates/base.html
@@ -209,8 +209,8 @@
        window.authResult = undefined;
        var apisToLoad;
 
-       var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
-       //var ROOT = '/_ah/api';
+       //var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+       var ROOT = '/_ah/api';
             var callback = function() {
         if (--apisToLoad == 0) {
           apiLoaded();
