--- a/templates/cases/case_show.html
+++ b/templates/cases/case_show.html
@@ -310,7 +310,7 @@
               </div>
 
               <div class="modal-body">
-                 <form id="editAccount" name="editlead" ng-submit="put(account)" class="form-horizontal"> 
+                 <form id="editCase" name="editlead" ng-submit="updatCasetHeader(casee)" class="form-horizontal"> 
                 
 
                   <div class="control-group">
