--- a/templates/contacts/show.html
+++ b/templates/contacts/show.html
@@ -621,14 +621,14 @@
                           
                         </div>
                     </div>
-                    <div class="control-group">
+                    <!--div class="control-group">
                         <label  class="required control-label">{{_("Company")}} </label>
                        
                         <div class="controls">
                           <input type="text"   id="id_Company" ng-model="contact.company">
                           
                         </div>
-                    </div>                     
+                    </div-->                     
                   
                      
                     
