--- a/templates/accounts/list.html
+++ b/templates/accounts/list.html
@@ -124,7 +124,7 @@
             <div class="inner-cards-container">
             
               <div ng-repeat="account in accounts" class="span3 responsive" data-tablet="span6" data-desktop="span3">
-                <div class="dashboard-stat cards">
+                <div class="dashboard-stat cards-small">
                   
                   <div class="details">
                     <a href="/#/accounts/show/<%= account.id %>"><h2 class="cardTitle">
@@ -135,9 +135,7 @@
                     <a ng-show="account.industry" class="desc" href="/#/search/type:Account <%=account.industry%>">#<%=account.industry%></a>
                     </div>
                   </div>
-                  <a class="more" href="/#/accounts/show/<%= account.id %>">
-                  View more <i class="m-icon-swapright m-icon-white"></i>
-                  </a>                 
+                                  
                 </div>
               </div>
               </div>
