--- a/templates/contacts/show.html
+++ b/templates/contacts/show.html
@@ -107,7 +107,8 @@
             <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false"></a>   {{_("Contacts")}} > <%=contact.firstname%> <%=contact.lastname%></h2>
             
 
-            <span ><a class="tag" href="#">#<%=contact.title%> </a></span><span> {{_("at")}} </span><span><a class="tag" href="#">#<%=contact.company%></a></span> <br>
+            <span ng-show="contact.title"><a class="tag" href="#">#<%=contact.title%> </a></span>
+            <span ng-show="contact.account_name">{{_("at")}} <a class="tag" href="#">#<%=contact.account_name%></a></span> <br>
             <span class="page-meta"><i class="icon-pencil"><a ng-click="editacontact()" class="btn-link addAnotherPhone" data-toggle="modal" > {{_("Edit")}}</a></i> |  <i class="icon-trash"><a ng-click="delete(contact)" class="btn-link addAnotherPhone"> {{_("Delete")}}</a></i></span>
 
            
