fixing tasks.get api

--- a/templates/activities/task_show.html
+++ b/templates/activities/task_show.html
@@ -131,15 +131,15 @@
                 </div>
                 <div class="portlet-body">
                 <ul class="chats">
-                  <li class="in">
+                 <!-- <li class="in">
                     <img class="avatar" alt="" src="static/img/avatar.jpg.png" />
                     <div class="message">
                       <span class="arrow"></span>
                       <a href="#" class="name">Hakim  Karriche</a>
                     </div>
-                  </li>
+                  </li>-->
 
-                  <li><a href="#addAttendee"  class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i>Add a new Attendee</a></li>
+                  <li><a href="#addAttendee"  class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i>Add a new assignee</a></li>
                 </ul>
                 </div>
                 
