working on opportunities

--- a/templates/base.html
+++ b/templates/base.html
@@ -230,11 +230,11 @@
        window.authResult = undefined;
        var apisToLoad;
 
-       //var ROOT = '/_ah/api';
+       var ROOT = '/_ah/api';
 
     
   
-      var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+      //var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
             var callback = function() {
