--- a/templates/opportunities/list.html
+++ b/templates/opportunities/list.html
@@ -36,17 +36,19 @@
               </span>
         </div>
       </div>
-       <div id="addOpportunityModal" class="modal fade" tabindex="-1" role="basic" aria-labelledby="myModalLabel" aria-hidden="true">
+      
+      <div id="addOpportunityModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                 <h3 id="myModalLabel">{{_("New Opportunity")}}</h3>
               </div>
               <div class="modal-body">
-                 <form id="addOpportunity" name="addOpportunity" ng-submit="save(opportunity)" class="form-horizontal"> 
+                <form id="addOpportunity" name="addOpportunity" ng-submit="save(opportunity)" class="form-horizontal"> 
                   <fieldset>
-
                   
-                  <div class="control-group">
+                    
+
+                    <div class="control-group">
                         <label  class="required control-label">{{_("Name")}} *</label>
                        
                         <div class="controls">
@@ -106,10 +108,6 @@
                        
                       
                     </div>
-                  
-                    
-
-                  
                     </fieldset>
                 
               </div>
@@ -154,7 +152,9 @@
                     <div class="desc">                           
                                      <span class="contact-title" ng-show="opp.amount">amount: <%=opp.amount%> </span>
                                     <span ng-show="opp.stage" class="contact-title" ><br>stage: <a class="desc" href="/#/search/type:Opportunity stage:<%=opp.stage%>">#<%=opp.stage%> </a></span><br>
-                                    <a ng-show="opp.description" class="desc" href="/#/search/type:Opportunity <%=opp.description%>">#<%=opp.description%></a>  
+                                    <span ng-show="opp.description">
+                                    <a href="/#/search/type:Opportunity <%=opp.description%>"  class="desc">#<%=opp.description%></a>  
+                                    </span>
                                     
                     </div>
                   </div>
@@ -170,7 +170,7 @@
                     <li ng-show="pagination.prev"><button ng-click="listPrevPageItems()" id="sample_editable_1_new" class="btn">
                     {{_("Prev")}} 
                     </button></li>
-                    <li ng-repeat="page in pagination.pages" ng-class='{active: page.isCurrent}'><a  href="#/leads/"><%= page.id %></a></li>
+                    <li ng-repeat="page in pagination.pages" ng-class='{active: page.isCurrent}'><a  href="#/accounts/"><%= page.id %></a></li>
                     <li  ng-show="pagination.next"><button ng-click="listNextPageItems()"  class="btn">
                     {{_("Next")}} 
                     </button></li>
