About Lead finished

--- a/templates/accounts/show.html
+++ b/templates/accounts/show.html
@@ -932,7 +932,7 @@
               <div class="modal-footer">
                   <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
               
-                  <input ng-hide="isLoading" type="submit" class="btn green" value="Add this phone">
+                  <input ng-hide="isLoading" type="submit" class="btn green" value="Add this email">
                   <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
               </div>
                 </form>
@@ -1023,7 +1023,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                 <h3 id="myModalLabel">{{_("Add Social link")}}</h3>
             </div>
-            <div class="modal-body">
+             <div class="modal-body">
                   <form id="addSocial" name="addsocial" ng-submit="addSocial(social)" class="form-horizontal"> 
                   <fieldset>
                     <div class="control-group">
@@ -1042,7 +1042,7 @@
                 </form>
         </div>
 
-      </div>
+    </div>
       <!-- END PAGE CONTAINER-->
 </div>
 <script type="text/javascript">
