--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -132,7 +132,7 @@
                     </h2></a>
                     <div class="desc">                           
                       
-                    <a class="desc" href="/#/">#<%=lead.company%></a>
+                    <a class="desc" href="/#/search/type:Lead <%=lead.company%>" ng-show="lead.company" >#<%=lead.company%></a>
                     </div>
                   </div>
                   <a class="more" href="/#/leads/show/<%= lead.id %>">
